--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 
 services:
-  frontend-mouheb-douiri:
+  frontend-bpr-track:
     build:
       context: .
       args:
         VITE_API_BASE_URL: ${VITE_API_BASE_URL:-https://localhost:7052}
-    container_name: frontend-mouheb-douiri
+    container_name: frontend-bpr-track
     ports:
-      - "1000:81"
+      - "1001:81"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-q", "-O", "-", "http://localhost:81/ || exit 1"]
